force-app/main/default/objects/Live_Agent_Button_Setting__mdt/Live_Agent_Button_Setting__mdt.object-meta.xml
<CustomObject>
    <description>These records map the live agent buttons in our org to the necessary chat endpoint, org id, and deployment id.

They also are able to be shown in the MyASU Help Tab, and when used in the Help Tab, can be configured to send the user to a chatbot rather than starting a conversation with a live agent.</description>
    <label>Live Agent Button Setting</label>
    <pluralLabel>Live Agent Button Settings</pluralLabel>
</CustomObject>