force-app/main/default/objects/Live_Agent_Button_Setting__mdt/fields/Chat_Button_Id__c.field-meta.xml
<CustomField>
    <fullName>Chat_Button_Id__c</fullName>
    <description>Button Id for specific Chat</description>
    <inlineHelpText>Button Id for specific Chat</inlineHelpText>
    <label>Chat Button Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>