force-app/main/default/objects/Live_Agent_Button_Setting__mdt/fields/Chat_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Chat_Deployment__c</fullName>
    <description>The unique ID of your Chat deployment. To get this value, from Setup, select Chat | Deployments. The script at the bottom of the page contains a call to the liveagent.init function with the pod, the deploymentId, and orgId as arguments. Copy the deploymentId value.</description>
    <inlineHelpText>The unique ID of your Chat deployment. To get this value, from Setup, select Chat | Deployments. The script at the bottom of the page contains a call to the liveagent.init function with the pod, the deploymentId, and orgId as arguments. Copy the deploymentId value.</inlineHelpText>
    <label>Chat Deployment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>