force-app/main/default/objects/Live_Agent_Button_Setting__mdt/fields/Chat_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Chat_Endpoint__c</fullName>
    <description>The hostname for the Chat endpoint that your organization has been assigned. To get this value, from Setup, search for Chat Settings and copy the hostname from the API Endpoint.</description>
    <inlineHelpText>The hostname for the Chat endpoint that your organization has been assigned. To get this value, from Setup, search for Chat Settings and copy the hostname from the API Endpoint.</inlineHelpText>
    <label>Chat Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>