force-app/main/default/objects/Live_Agent_Button_Setting__mdt/fields/Chatbot_URL__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_URL__c</fullName>
    <description>This is used when this button is display on the Help tab.  When a user clicks on this button, they are sent to the chatbot rather than starting a live agent chat with a person.</description>
    <inlineHelpText>This is used when this button is display on the Help tab.  When a user clicks on this button, they are sent to the chatbot rather than starting a live agent chat with a person.</inlineHelpText>
    <label>Chatbot URL</label>
    <type>Url</type>
</CustomField>