force-app/main/default/objects/Live_Agent_Button_Setting__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>When shown on the MyASU Help Tab, this control the order the buttons appear in.  Lower numbers appear first.</description>
    <inlineHelpText>When shown on the MyASU Help Tab, this control the order the buttons appear in.  Lower numbers appear first.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>