force-app/main/default/objects/Live_Agent_Button_Setting__mdt/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <description>The Salesforce org ID. To get this value, from Setup, search for Company Information and copy the Salesforce Organization ID.</description>
    <inlineHelpText>The Salesforce org ID. To get this value, from Setup, search for Company Information and copy the Salesforce Organization ID.</inlineHelpText>
    <label>Org Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>