force-app/main/default/objects/Live_Agent_Button_Setting__mdt/fields/Show_on_Help_Tab__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Help_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether this button appears on the MyASU Help Tab.</description>
    <inlineHelpText>Controls whether this button appears on the MyASU Help Tab.</inlineHelpText>
    <label>Show on Help Tab</label>
    <type>Checkbox</type>
</CustomField>